Local IP literal fix

--- a/Python Server/Example.html
+++ b/Python Server/Example.html
@@ -11,7 +11,7 @@
 		Text
 		<script type="text/javascript">
 			$(function() {
-				var localURI = "http://localhost:8000/";
+				var localURI = "http://10.150.85.50:8000/";
 				$.ajax(localURI);
 			});
 		</script>
