--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -5,15 +5,15 @@
     <title>Pod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="c:/users/maddy/documents/yrs/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="bootstrap.css" rel="stylesheet" media="screen">
   </head>
   <body>
   	<!--	<h3>Pod</h3>
 
-    	<a href="c:/users/maddy/documents/yrs/lights.html"><div class="btn btn-info">Lights</div></a>
-    	<a href="/weather"><div class="btn btn-info">Weather</div></a>
-    	<a href="/temperature"><div class="btn btn-info">Temperature</div></a>
-    	<a href="/temperature"><div class="btn btn-info">Power</div></a>
+    	<a href="lights.html"><div class="btn btn-info">Lights</div></a>
+    	<a href="weather"><div class="btn btn-info">Weather</div></a>
+    	<a href="temperature"><div class="btn btn-info">Temperature</div></a>
+    	<a href="temperature"><div class="btn btn-info">Power</div></a>
 	<script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
