--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -16,10 +16,10 @@
         var temperature = Math.round(reply.main.temp - 272.15);
   
 		
-		request = new XMLHttpRequest();
-		url = "http://10.150.85.50:8000/temp=" + temperature;
-		request.open("GET", url, false);
-        request.send(null);
+		//request = new XMLHttpRequest();
+		//url = "http://10.150.85.50:8000/temp=" + temperature;
+		//request.open("GET", url, false);
+        //request.send(null);
         alert("Temp = " + temperature);
     }
 	
