Made the functions nicer

--- a/Weather/Weather.html
+++ b/Weather/Weather.html
@@ -1,6 +1,6 @@
 <html>
     <script>
-    function gettemp() {
+    function geticon() {
         var url = "http://api.openweathermap.org/data/2.5/weather" +
             "?q=Swansea,uk&amp;units=metric";
    
@@ -9,36 +9,17 @@
         request.send(null);
         var reply = JSON.parse(request.responseText);
         var temperature = Math.round(reply.main.temp - 272.15);
-  
-		
-		//request = new XMLHttpRequest();
-		//url = "http://10.150.85.50:8000/temp=" + temperature;
-		//request.open("GET", url, false);
-        //request.send(null);
-        alert("Temp = " + temperature);
-    }
-	
-	function getweather() {
-        var url = "http://api.openweathermap.org/data/2.5/weather" +
-            "?q=Swansea,uk&amp;units=metric";
-   
-        var request = new XMLHttpRequest();
-        request.open("GET", url, false);
-        request.send(null);
-        var reply = JSON.parse(request.responseText);
-        var description = reply.weather[0].description
-		
-		request = new XMLHttpRequest();
-		url = "http://10.150.85.50:8000/weather=" + description;
-		request.open("GET", url, false);
-        request.send(null);
-        alert(description);
+        var description = reply.weather[0].description;
+        var icon = "http://openweathermap.org/img/w/" +
+                reply.weather[0].icon + ".png";
+        var img = document.getElementById("icon");
+        img.src = icon;
+        //alert("Temp = " + temperature + "C\n" + description + "\n" + icon);
     }
     </script>
     <body>
-        <input type="submit" value="Temperature" onclick="gettemp()">
-		
-        <input type="submit" value="Weather" onclick="getweather()">
+         <input type="submit" value="Weather" onclick="geticon()">
+        <img id="icon" src="" alt="weather">
 		
     </body>
 </html>
