--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -196,27 +196,27 @@
       <center>
       <div class="row" style="margin-top:30px">
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <a href="weather.html"><img class="img-circle" src="http://i.imgur.com/GCZYMH7.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;"></a>
           <h2>Weather</h2>
           <p>Check the weather at your home.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <a href="lights.html"><img class="img-circle" src="http://i.imgur.com/7ko3KNJ.jpg" style="width: 140px; height: 140px;"></a>
           <h2>Lighting</h2>
           <p>Turn lights on and off.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <img class="img-circle" src="http://i.imgur.com/TIPcEbd.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Power</h2>
           <p>View and manage power consumption.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <img class="img-circle" src="http://i.imgur.com/3n25Nl5.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Door</h2>
           <p>Lock and unlock your doors.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <a href="temp.html"><img class="img-circle" src="http://i.imgur.com/yemVoqq.jpg" style="width: 140px; height: 140px;"></a>
           <h2>Temperature</h2>
           <p>Control the temperature of your home.</p>
         </div><!-- /.col-lg-4 -->
