--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -116,7 +116,7 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li class="dropdown">
@@ -196,17 +196,17 @@
       <center>
       <div class="row" style="margin-top:30px">
         <div class="col-lg-4">
-          <a href="weather.html"><img class="img-circle" src="http://i.imgur.com/GCZYMH7.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;"></a>
+          <a href="weather.html"><img class="img-circle" src="http://i.imgur.com/s2AIbEM.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;"></a>
           <h2>Weather</h2>
           <p>Check the weather at your home.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <a href="lights.html"><img class="img-circle" src="http://i.imgur.com/7ko3KNJ.jpg" style="width: 100px; height: 100px;"></a>
+          <a href="lights.html"><img class="img-circle" src="http://i.imgur.com/y4cdFTM.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Lighting</h2>
           <p>Turn lights on and off.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="http://i.imgur.com/TIPcEbd.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+          <img class="img-circle" src="http://i.imgur.com/ZP9hkYW.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
           <h2>Power</h2>
           <p>View and manage power consumption.</p>
         </div><!-- /.col-lg-4 -->
