--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -4,7 +4,7 @@
     <title>Pod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="c:/users/maddy/documents/yrs/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="bootstrap.css" rel="stylesheet" media="screen">
   </head>
   <body style="padding-left:20px">
   		<h3>Pod</h3>
