--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -196,7 +196,7 @@
       <center>
       <div class="row" style="margin-top:30px">
         <div class="col-lg-4">
-          <a href="weather.html"><img class="img-circle" src="http://i.imgur.com/s2AIbEM.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;"></a>
+          <a href="weather.html"><img class="img-circle" src="http://i.imgur.com/s2AIbEM.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Weather</h2>
           <p>Check the weather at your home.</p>
         </div><!-- /.col-lg-4 -->
@@ -206,22 +206,22 @@
           <p>Turn lights on and off.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="http://i.imgur.com/ZP9hkYW.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+          <img class="img-circle" src="http://i.imgur.com/jMNRGzh.jpg" style="width: 100px; height: 100px;">
           <h2>Power</h2>
           <p>View and manage power consumption.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="http://i.imgur.com/i5cIKIg.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+          <img class="img-circle" src="http://i.imgur.com/i5cIKIg.jpg" style="width: 100px; height: 100px;">
           <h2>Door</h2>
           <p>Lock and unlock your doors.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <a href="temp.html"><img class="img-circle" src="http://i.imgur.com/iFYgnr6.jpg" style="width: 100px; height: 100px;"></a>
+          <a href="temp.html"><img class="img-circle" src="http://i.imgur.com/ByjVYbI.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Temperature</h2>
           <p>Control the temperature of your home.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" style="width: 100px; height: 100px;">
           <h2>Mode</h2>
           <p>.</p>
         </div><!-- /.col-lg-4 -->
