--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -221,9 +221,9 @@
           <p>Control the temperature of your home.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" style="width: 100px; height: 100px;">
+          <img class="img-circle" src="http://i.imgur.com/k2ghwlP.jpg" style="width: 100px; height: 100px;">
           <h2>Mode</h2>
-          <p>.</p>
+          <p>Choose between modes.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
   </center>
