--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -206,7 +206,7 @@
           <p>Turn lights on and off.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="http://i.imgur.com/jMNRGzh.jpg" style="width: 100px; height: 100px;">
+          <a href="power.html"><img class="img-circle" src="http://i.imgur.com/jMNRGzh.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Power</h2>
           <p>View and manage power consumption.</p>
         </div><!-- /.col-lg-4 -->
