--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -63,7 +63,7 @@
 	
 	
 	<div class="page-header">
-  <h1>Temperature  <small>Select Temperature for inside your home</small></h1>
+  <h1>Temperature</h1><small>Select Temperature for inside your home</small>
 </div>
 	
 	<div class="btn-group">
