--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -55,7 +55,7 @@
   	</div> -->
 	
 	<div class="page-header">
-  <h1>Outdoor Temperature<small id="OutdoorTemp">0</small> </h1>
+  <h1>Outdoor Temperature</h1> <small id="OutdoorTemp">0</small> 
   
   <input type="submit" value="Temperature" onclick="gettemp()">
   
