maddy sucks ducks

--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -67,7 +67,7 @@
 </div>
 	
 	<div class="btn-group">
-  <button type="button" class="btn btn-default">15</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp()">15</button>
   <button type="button" class="btn btn-default">16</button>
   <button type="button" class="btn btn-default">17</button>
   <button type="button" class="btn btn-default">18</button>
@@ -109,6 +109,10 @@ function gettemp() {
       //  alert("Temp = " + temperature);
 	}
 	
+function indoorTemp() {
+	alert("This button works");
+
+}	
 gettemp();
 
 
