--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -55,7 +55,7 @@
   	</div> -->
 	
 	<div class="page-header">
-  <h1>Outdoor Temperature <small id="OutdoorTemp">0</small> </h1>
+  <p><h3>Outdoor Temperature: <g id="OutdoorTemp">0</g></h3></p>
   
   <input type="submit" value="Temperature" onclick="gettemp()">
   
@@ -63,7 +63,7 @@
 	
 	
 	<div class="page-header">
-  <h1>Temperature</h1><small>Select Temperature for inside your home</small>
+  <h3>Temperature</h3><small>Select Temperature for inside your home</small>
 </div>
 	
 	<div class="btn-group">
