--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -8,7 +8,7 @@
   </head>
   <body style="padding-left:20px">
   		<h3>Pod</h3>
-    	<a href="c:/users/maddy/documents/yrs/project.html"><div class="btn btn-info">Home</div></a>
+    	<a href="project.html"><div class="btn btn-info">Home</div></a>
 	<script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
