--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -62,7 +62,7 @@
 	
 	
 	<div class="page-header">
-  <h3>Temperature</h3><small>Select Temperature for inside your home</small>
+  <h3>Temperature</h3><small>Select a temperature for inside your home</small>
 </div>
 	
 	<div class="btn-group">
