--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -55,9 +55,9 @@
   	</div> -->
 	
 	<div class="page-header">
-  <p><h3>Outdoor Temperature: <g id="OutdoorTemp">0</g></h3></p>
+  <p><h3>Outdoor Temperature: <g id="OutdoorTemp"><input type="submit" value="Temperature" onclick="gettemp()"></g></h3></p>
   
-  <input type="submit" value="Temperature" onclick="gettemp()">
+  
   
 </div>
 	
