--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -55,7 +55,7 @@
   	</div> -->
 	
 	<div class="page-header">
-  <p><h3>Outdoor Temperature: <g id="OutdoorTemp"><input type="submit" value="Temperature" onclick="gettemp()"></g>&deg;C</h3></p>
+  <p><h3>Outdoor Temperature: <g id="OutdoorTemp"></g>&deg;C</h3></p>
   
   
   
@@ -67,17 +67,17 @@
 </div>
 	
 	<div class="btn-group">
-  <button type="button" class="btn btn-default" onclick="indoorTemp()">15&deg;C</button>
-  <button type="button" class="btn btn-default">16&deg;C</button>
-  <button type="button" class="btn btn-default">17&deg;C</button>
-  <button type="button" class="btn btn-default">18&deg;C</button>
-  <button type="button" class="btn btn-default">19&deg;C</button>
-  <button type="button" class="btn btn-default">20&deg;C</button>
-  <button type="button" class="btn btn-default">21&deg;C</button>
-  <button type="button" class="btn btn-default">22&deg;C</button>
-  <button type="button" class="btn btn-default">23&deg;C</button>
-  <button type="button" class="btn btn-default">24&deg;C</button>
-  <button type="button" class="btn btn-default">25&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(15)">15&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(16)">16&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(17)">17&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(18)">18&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(19)">19&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(20)">20&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(21)">21&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(22)">22&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(23)">23&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(24)">24&deg;C</button>
+  <button type="button" class="btn btn-default" onclick="indoorTemp(25)">25&deg;C</button>
 </div>
 
 
