--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -211,9 +211,9 @@
           <p>View and manage power consumption.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="http://i.imgur.com/i5cIKIg.jpg" style="width: 100px; height: 100px;">
+          <a href="doors.html"><img class="img-circle" src="http://i.imgur.com/i5cIKIg.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Door</h2>
-          <p>Lock and unlock your doors.</p>
+          <p>Lock and unlock your doors and windows.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="temp.html"><img class="img-circle" src="http://i.imgur.com/ByjVYbI.jpg" style="width: 100px; height: 100px;"></a>
