--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
+
+
   <head>
     <title>Pod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="bootstrap.css" rel="stylesheet" media="screen">
   </head>
-
-  <div class="navbar-wrapper">
+  <body>
+    <div class="navbar-wrapper">
       <div class="container">
 
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -19,7 +21,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="project.html">Pod</a>
+              <a class="navbar-brand" href="">Pod</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -45,5 +47,3 @@
 
       </div>
     </div>
-  <body>
-  	
