--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -112,26 +112,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Pod</a>
-            </div>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
-              </ul>
+              <a class="navbar-brand" href="project.html">Pod</a>
             </div>
           </div>
         </div>
@@ -213,7 +194,7 @@
         <div class="col-lg-4">
           <a href="doors.html"><img class="img-circle" src="http://i.imgur.com/i5cIKIg.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Door</h2>
-          <p>Lock and unlock your doors and windows.</p>
+          <p>Open and close your doors and windows.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="temp.html"><img class="img-circle" src="http://i.imgur.com/ByjVYbI.jpg" style="width: 100px; height: 100px;"></a>
