--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -202,9 +202,9 @@
           <p>Control the temperature of your home.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="http://i.imgur.com/k2ghwlP.jpg" style="width: 100px; height: 100px;">
-          <h2>Mode</h2>
-          <p>Choose between modes.</p>
+          <img class="img-circle" src="http://i.imgur.com/2HeYUdi.jpg" style="width: 100px; height: 100px;">
+          <h2>Settings</h2>
+          <p>Change user information and mode.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
   </center>
